fix for stuck hover states for 1st level tabs
SVN-Revision: 7053

--- a/projects/web/src/main/webapp/css/common.css
+++ b/projects/web/src/main/webapp/css/common.css
@@ -199,13 +199,7 @@ a#help:hover {
 
 
 /***
-The following are the rules for 1st level navigation tabs:
-firstlevelnav_listAdverseEventsController: Adverse Events
-firstlevelnav_searchStudyController: Studies
-3. Subjects
-4. Rules
-5. Administration
-6. Advanced Search
+1st LEVEL TABS
 
 */
 
@@ -218,7 +212,7 @@ a#firstlevelnav_listAdverseEventsController {
 	float: left;
 	margin-right: -5px;
 }
-a#firstlevelnav_listAdverseEventsController:link{background-position:0px;}
+a#firstlevelnav_listAdverseEventsController:link{background-position:0px 0px;}
 a#firstlevelnav_listAdverseEventsController:hover{background-position:0px -45px;}
 a#firstlevelnav_listAdverseEventsController:active{background-position:0px -90px;}
 .selected a#firstlevelnav_listAdverseEventsController {background-image: url(../images/blue/adverseEvents_btn_selected.png);}
@@ -232,7 +226,7 @@ a#firstlevelnav_searchStudyController {
 margin-right: -5px;
 margin-left: -5px;
 }
-a#firstlevelnav_searchStudyController:link{background-position:0px;}
+a#firstlevelnav_searchStudyController:link{background-position:0px 0px;}
 a#firstlevelnav_searchStudyController:hover{background-position:0px -45px;}
 a#firstlevelnav_searchStudyController:active{background-position:0px -90px;}
 
@@ -247,7 +241,7 @@ a#firstlevelnav_createParticipantController {
 	margin-right: -5px;
 margin-left: -5px;
 }
-a#firstlevelnav_createParticipantController:link{background-position:0px;}
+a#firstlevelnav_createParticipantController:link{background-position:0px 0px;}
 a#firstlevelnav_createParticipantController:hover{background-position:0px -45px;}
 a#firstlevelnav_createParticipantController:active{background-position:0px -90px;}
 .selected a#firstlevelnav_createParticipantController {background-image: url(../images/blue/subjects_btn_selected.png);}
@@ -261,7 +255,7 @@ a#firstlevelnav_createRuleController {
 	margin-right: -5px;
 margin-left: -5px;
 }
-a#firstlevelnav_createRuleController:link{background-position:0px;}
+a#firstlevelnav_createRuleController:link{background-position:0px 0px;}
 a#firstlevelnav_createRuleController:hover{background-position:0px -45px;}
 a#firstlevelnav_createRuleController:active{background-position:0px -90px;}
 .selected a#firstlevelnav_createRuleController {background-image: url(../images/blue/rules_btn_selected.png);}
@@ -275,7 +269,7 @@ a#firstlevelnav_studyController {
 	margin-right: -5px;
 margin-left: -5px;
 }
-a#firstlevelnav_studyController:link{background-position:0px;}
+a#firstlevelnav_studyController:link{background-position:0px 0px;}
 a#firstlevelnav_studyController:hover{background-position:0px -45px;}
 a#firstlevelnav_studyController:active{background-position:0px -90px;}
 .selected a#firstlevelnav_studyController {background-image: url(../images/blue/advancedSearch_btn_selected.png);}
@@ -289,7 +283,7 @@ a#firstlevelnav_configurationController {
 	margin-right: -5px;
 margin-left: -5px;
 }
-a#firstlevelnav_configurationController:link{background-position:0px;}
+a#firstlevelnav_configurationController:link{background-position:0px 0px;}
 a#firstlevelnav_configurationController:hover{background-position:0px -45px;}
 a#firstlevelnav_configurationController:active{background-position:0px -90px;}
 .selected a#firstlevelnav_configurationController {background-image: url(../images/blue/administration_btn_selected.png);}
